lots of updates

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ellie Template</title>
+    <title>Benchmark</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,400i,500,700|Titillium+Web:600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+    <link rel="shortcut icon" type="image/ico" href="img/favicon.ico">
 </head>
 <body class="is-boxed">
     <div class="body-wrap boxed-container">
@@ -18,7 +19,7 @@
                         <h1 class="m-0">
                             <a href="#">
 								<svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-								    <title>Ellie</title>
+								    <title>Benchmark</title>
 								    <defs>
 								        <linearGradient x1="0%" y1="0%" y2="100%" id="logo-a">
 								            <stop stop-color="#4353FF" offset="0%"/>
@@ -53,8 +54,8 @@
                 <div class="container">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0 is-revealing">Landing template for startups</h1>
-	                        <p class="hero-paragraph is-revealing">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
+	                        <h1 class="hero-title mt-0 is-revealing">The only sales tool for sales engineers</h1>
+	                        <p class="hero-paragraph is-revealing">Don't waste anymore time using internal tools or report building</p>
 							<div class="hero-form field field-grouped is-revealing">
 	                            <div class="control control-expanded">
 	                                <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
@@ -351,9 +352,9 @@
 											    </g>
 											</svg>
 		                                </div>
-		                                <h4 class="feature-title m-0">Discover</h4>
+		                                <h4 class="feature-title m-0">Growth</h4>
 									</div>
-	                                <p class="text-sm mb-0">A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise design elements.</p>
+	                                <p class="text-sm mb-0">Connect your favorite apps via API to see how you can grow based on your data</p>
 	                            </div>
 	                        </div>
 							<div class="feature">
@@ -368,9 +369,9 @@
 											    </g>
 											</svg>
 		                                </div>
-		                                <h4 class="feature-title m-0">Discover</h4>
+		                                <h4 class="feature-title m-0">Transparency</h4>
 									</div>
-	                                <p class="text-sm mb-0">A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise design elements.</p>
+	                                <p class="text-sm mb-0">Create deal transparency for you and your sales team by showcasing what stage in the process you're in</p>
 	                            </div>
 	                        </div>
 							<div class="feature">
@@ -387,9 +388,9 @@
 											    </g>
 											</svg>
 		                                </div>
-		                                <h4 class="feature-title m-0">Discover</h4>
+		                                <h4 class="feature-title m-0">Consolidate</h4>
 									</div>
-	                                <p class="text-sm mb-0">A pseudo-Latin text used in web design, layout, and printing in place of things to emphasise design elements.</p>
+	                                <p class="text-sm mb-0">Use one dashboard to see how you and your team is performing based on your data's metrics</p>
 	                            </div>
 	                        </div>
 						</div>
@@ -426,8 +427,8 @@
 			</div>
             <div class="container">
                 <div class="site-footer-inner has-top-divider">
-                    <div class="footer-copyright">&copy; 2018 Ellie, all rights reserved</div>
-					<ul class="footer-social-links list-reset">
+                    <div class="footer-copyright">&copy; 2018 Benchmark SE, all rights reserved</div>
+					<!--<ul class="footer-social-links list-reset">
 						<li>
 							<a href="#">
 								<span class="screen-reader-text">Facebook</span>
@@ -452,7 +453,7 @@
 								</svg>
 							</a>
 						</li>
-					</ul>
+					</ul>-->
                 </div>
             </div>
         </footer>
